# spaceship-online-game

./: .gitignore  deploy.sh
client/: index.html  manifest.json
client-rust/: Cargo.toml  Trunk.toml  index.html
client-rust/src/: app.rs  asteroids.rs  auto_aim.rs  canvas.rs  constants.rs  controller.rs  effects.rs  fog.rs  game_loop.rs  hud.rs  hyperspace.rs  input.rs  lobby.rs  main.rs  match_lobby.rs  mobs.rs  network.rs  pickups.rs  projectiles.rs  protocol.rs  renderer.rs  ships.rs  starfield.rs  state.rs
client/js/: asteroids.js  constants.js  controller.js  effects.js  fog.js  hud.js  input.js  lobby.js  main.js  mobs.js  network.js  pickups.js  projectiles.js  renderer.js  ships.js  starfield.js  state.js  tests.js
server/: ability.go  achievement.go  analytics.go  asteroid.go  asteroid_test.go  auth.go  client.go  collision.go  collision_test.go  combat.go  combat_test.go  database.go  game.go  game_test.go  go.mod  go.sum  healzone.go  hub.go  integration_test.go  main.go  match.go  mob.go  mob_test.go  pickup.go  player.go  player_test.go  projectile.go  projectile_test.go  protocol.go  server.go  session.go  shipclass.go  spatial.go  spatial_test.go  store.go  util.go
